# freeimage

./: CMakeLists.txt  FreeImage.rc  FreeImageConfig-dynamic.h  FreeImageConfig-static.h  LICENSE
src/FreeImage/: BitmapAccess.cpp  CacheFile.cpp  ColorLookup.cpp  Conversion.cpp  Conversion16_555.cpp  Conversion16_565.cpp  Conversion4.cpp  Conversion8.cpp  ConversionRGBA16.cpp  ConversionRGBF.cpp  ConversionType.cpp  ConversionUINT16.cpp  FreeImage.cpp  FreeImageC.c  GetType.cpp  Halftoning.cpp  J2KHelper.cpp  J2KHelper.h  LFPQuantizer.cpp  PSDParser.cpp  PSDParser.h  PluginDDS.cpp  PluginEXR.cpp  PluginG3.cpp  PluginGIF.cpp  PluginHDR.cpp  PluginICO.cpp  PluginIFF.cpp  PluginJ2K.cpp  PluginJNG.cpp  PluginJP2.cpp  PluginJPEG.cpp  PluginJXR.cpp  PluginKOALA.cpp  PluginMNG.cpp  PluginPCD.cpp  PluginPCX.cpp  PluginPFM.cpp  PluginPICT.cpp  PluginPNG.cpp  (+19 more)
src/FreeImageToolkit/: BSplineRotate.cpp  Background.cpp  Channels.cpp  ClassicRotate.cpp  Colors.cpp  CopyPaste.cpp  Display.cpp  Filters.h  Flip.cpp  JPEGTransform.cpp  MultigridPoissonSolver.cpp  Rescale.cpp  Resize.cpp  Resize.h
src/Metadata/: Exif.cpp  FIRational.cpp  FIRational.h  FreeImageTag.cpp  FreeImageTag.h  IPTC.cpp  TagConversion.cpp  TagLib.cpp  XTIFF.cpp
